qa/apps/portal-ui-release-cqdg-1234/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-ui-release-cqdg-1234
  name: portal-ui-release-cqdg-1234
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-ui-release-cqdg-1234
  template:
    metadata:
      labels:
        app: portal-ui-release-cqdg-1234
    spec:
      imagePullSecrets:
      - name: images-registry-credentials
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-portal-ui:qa-f0772b72b4252eaa87692b752a77b21986e66a40-1680277718 # {"$imagepolicy": "cqdg-qa-fluxcd:portal-ui-release-cqdg-1234"}
        name: portal-ui-release-cqdg-1234
