qa/apps/portal-ui-release-cqdg-1234/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal-ui-release-cqdg-1234
  name: portal-ui-release-cqdg-1234
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: portal-ui-release-cqdg-1234
