qa/apps/portal-ui-release-cqdg-1234/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-ui-release-cqdg-1234
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      http2_max_header_size 100k;
      http2_max_field_size 8k;
      client_header_buffer_size 100k;
      large_client_header_buffers 4 100k;
spec:
  tls:
    - hosts:
        - portal-ui-cqdg-1234.qa.cqdg.ferlab.bio
      secretName: ingress-certificate
  rules:
    - host: portal-ui-cqdg-1234.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: portal-ui-release-cqdg-1234
              port:
                number: 80
